syntax = "proto3";

package call_transaction_package;

service CallTransaction
{
    rpc InitiateCall(CallRequest) returns (CallMessage) {}
}

message CallRequest {
    string userAuthToken = 1;
}

message CallMessage {
    string ack = 1;
}